--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -158,6 +158,7 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.26.159.157;
+set_real_ip_from 155.138.161.171;
 set_real_ip_from 156.67.111.146;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 162.19.230.94;
@@ -291,7 +292,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -699,6 +699,7 @@ set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
+set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
@@ -1430,6 +1431,7 @@ set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 3.221.45.84;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.37.81;
 set_real_ip_from 37.114.41.119;
@@ -1457,7 +1459,6 @@ set_real_ip_from 38.152.53.253;
 set_real_ip_from 38.152.53.254;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 41.216.183.87;
-set_real_ip_from 44.219.223.233;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1640,9 +1641,6 @@ set_real_ip_from 80.94.92.106;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 82.118.242.36;
-set_real_ip_from 82.153.138.119;
-set_real_ip_from 82.153.138.208;
-set_real_ip_from 82.153.138.24;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.139.190;
@@ -1654,7 +1652,6 @@ set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
-set_real_ip_from 84.247.178.134;
 set_real_ip_from 85.17.9.83;
 set_real_ip_from 85.215.76.62;
 set_real_ip_from 85.239.41.130;
@@ -1731,12 +1728,6 @@ set_real_ip_from 94.16.116.81;
 set_real_ip_from 94.16.116.86;
 set_real_ip_from 94.16.121.226;
 set_real_ip_from 94.16.121.91;
-set_real_ip_from 94.177.106.247;
-set_real_ip_from 94.177.106.37;
-set_real_ip_from 94.177.106.46;
-set_real_ip_from 94.177.106.54;
-set_real_ip_from 94.177.106.55;
-set_real_ip_from 94.177.106.59;
 set_real_ip_from 94.228.163.25;
 set_real_ip_from 94.228.169.70;
 set_real_ip_from 94.230.208.147;
