--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -14,9 +13,6 @@ allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.253.24.18;
 allow 103.28.52.93;
-allow 104.167.242.116;
-allow 104.167.242.117;
-allow 104.167.242.118;
 allow 104.192.1.138;
 allow 104.192.3.74;
 allow 104.219.232.126;
@@ -136,10 +132,7 @@ allow 141.98.11.62;
 allow 141.98.119.106;
 allow 142.44.133.81;
 allow 142.44.234.69;
-allow 144.172.118.4;
-allow 144.172.118.55;
-allow 144.172.118.76;
-allow 144.172.118.90;
+allow 143.110.156.176;
 allow 144.24.197.112;
 allow 146.59.234.220;
 allow 146.59.35.246;
@@ -157,6 +150,7 @@ allow 151.80.148.159;
 allow 152.89.233.169;
 allow 154.16.116.61;
 allow 154.26.159.157;
+allow 155.138.161.171;
 allow 156.67.111.146;
 allow 160.119.249.240;
 allow 162.19.230.94;
@@ -202,7 +196,6 @@ allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.58.100.98;
-allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.97.114.202;
 allow 178.17.170.184;
@@ -235,7 +228,19 @@ allow 179.43.161.171;
 allow 179.43.161.172;
 allow 179.43.161.173;
 allow 179.43.161.174;
+allow 179.43.167.100;
+allow 179.43.167.101;
+allow 179.43.167.102;
+allow 179.43.167.103;
+allow 179.43.167.104;
+allow 179.43.167.105;
+allow 179.43.167.106;
+allow 179.43.167.107;
+allow 179.43.167.108;
+allow 179.43.167.109;
+allow 179.43.167.110;
 allow 179.43.167.205;
+allow 179.43.167.99;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
@@ -698,6 +703,7 @@ allow 199.195.253.124;
 allow 199.195.253.156;
 allow 199.195.253.180;
 allow 199.195.253.247;
+allow 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 allow 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -939,9 +945,6 @@ allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
-allow 2602:fccf:310:1::a;
-allow 2602:fccf:310:1::b;
-allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
@@ -1044,9 +1047,6 @@ allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
-allow 2605:6400:d814:1b8::4;
-allow 2605:6400:d814:2775::;
-allow 2605:6400:d814:4181::1;
 allow 2605:a140:2186:5418::1;
 allow 2605:aa80:0:9::3;
 allow 2607:5300:201:3100::535e;
@@ -1077,10 +1077,21 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
+allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a763;
+allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a764;
+allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a765;
+allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a766;
+allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a767;
+allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a768;
+allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a769;
+allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76a;
+allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76b;
+allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76c;
+allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76d;
+allow 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76e;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:898:218::1;
@@ -1429,7 +1440,7 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 34.238.92.33;
+allow 3.227.174.94;
 allow 35.0.127.52;
 allow 37.114.37.81;
 allow 37.114.41.119;
