--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -1,3 +1,4 @@
+set_real_ip_from 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 set_real_ip_from 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
@@ -137,9 +138,6 @@ set_real_ip_from 2602:fc24:12:a679::1;
 set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:2b4::1;
 set_real_ip_from 2602:fc24:19:30::1;
-set_real_ip_from 2602:fccf:310:1::a;
-set_real_ip_from 2602:fccf:310:1::b;
-set_real_ip_from 2602:fccf:310:1::c;
 set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
 set_real_ip_from 2604:2dc0:202:300::ed3;
@@ -242,9 +240,6 @@ set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 set_real_ip_from 2605:6400:40:fe09::2;
-set_real_ip_from 2605:6400:d814:1b8::4;
-set_real_ip_from 2605:6400:d814:2775::;
-set_real_ip_from 2605:6400:d814:4181::1;
 set_real_ip_from 2605:a140:2186:5418::1;
 set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:201:3100::535e;
@@ -274,10 +269,21 @@ set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
-set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
+set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a763;
+set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a764;
+set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a765;
+set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a766;
+set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a767;
+set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a768;
+set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a769;
+set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76a;
+set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76b;
+set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76c;
+set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76d;
+set_real_ip_from 2a02:29b8:dc01:1801:42:b3ff:fe2b:a76e;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:898:218::1;
