--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -303,6 +303,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -912,6 +913,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.26.133.152;
@@ -936,6 +938,7 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
+allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
@@ -1450,7 +1453,7 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 3.227.96.35;
+allow 3.223.164.231;
 allow 35.0.127.52;
 allow 37.114.37.81;
 allow 37.114.41.119;
@@ -1495,6 +1498,9 @@ allow 45.138.16.240;
 allow 45.138.16.249;
 allow 45.138.16.42;
 allow 45.138.16.76;
+allow 45.139.122.176;
+allow 45.139.122.178;
+allow 45.139.122.179;
 allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
@@ -1646,7 +1652,7 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
-allow 79.102.22.166;
+allow 79.102.178.70;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
@@ -1661,6 +1667,7 @@ allow 82.118.242.36;
 allow 82.153.138.119;
 allow 82.153.138.208;
 allow 82.153.138.24;
+allow 82.197.182.161;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.139.190;
@@ -1677,6 +1684,7 @@ allow 85.215.76.62;
 allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.104.194.13;
+allow 86.104.194.27;
 allow 87.118.110.27;
 allow 87.118.116.103;
 allow 87.118.116.90;
