--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -303,6 +303,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -912,6 +913,7 @@ set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
 set_real_ip_from 23.155.24.6;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.165.104.119;
 set_real_ip_from 23.236.122.62;
 set_real_ip_from 23.26.133.152;
@@ -936,6 +938,7 @@ set_real_ip_from 2600:3c03::f03c:92ff:fed8:d9ef;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c08::f03c:94ff:fef8:9872;
 set_real_ip_from 2600:3c0a::f03c:94ff:fe5a:3a17;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:f9f3:0:2::3d;
@@ -1450,7 +1453,7 @@ set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
-set_real_ip_from 3.227.96.35;
+set_real_ip_from 3.223.164.231;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.114.37.81;
 set_real_ip_from 37.114.41.119;
@@ -1495,6 +1498,9 @@ set_real_ip_from 45.138.16.240;
 set_real_ip_from 45.138.16.249;
 set_real_ip_from 45.138.16.42;
 set_real_ip_from 45.138.16.76;
+set_real_ip_from 45.139.122.176;
+set_real_ip_from 45.139.122.178;
+set_real_ip_from 45.139.122.179;
 set_real_ip_from 45.141.215.110;
 set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
@@ -1646,7 +1652,7 @@ set_real_ip_from 77.91.85.147;
 set_real_ip_from 77.91.86.95;
 set_real_ip_from 77.91.87.79;
 set_real_ip_from 78.142.18.219;
-set_real_ip_from 79.102.22.166;
+set_real_ip_from 79.102.178.70;
 set_real_ip_from 79.124.8.241;
 set_real_ip_from 79.137.198.213;
 set_real_ip_from 80.210.78.252;
@@ -1661,6 +1667,7 @@ set_real_ip_from 82.118.242.36;
 set_real_ip_from 82.153.138.119;
 set_real_ip_from 82.153.138.208;
 set_real_ip_from 82.153.138.24;
+set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.139.190;
@@ -1677,6 +1684,7 @@ set_real_ip_from 85.215.76.62;
 set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 86.104.194.13;
+set_real_ip_from 86.104.194.27;
 set_real_ip_from 87.118.110.27;
 set_real_ip_from 87.118.116.103;
 set_real_ip_from 87.118.116.90;
