--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -13,9 +13,6 @@ allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.253.24.18;
 allow 103.28.52.93;
-allow 104.167.242.116;
-allow 104.167.242.117;
-allow 104.167.242.118;
 allow 104.192.1.138;
 allow 104.192.3.74;
 allow 104.219.232.126;
@@ -95,6 +92,7 @@ allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.158.147;
 allow 108.61.189.136;
+allow 109.104.153.22;
 allow 109.169.33.163;
 allow 109.248.144.73;
 allow 109.69.67.17;
@@ -112,6 +110,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 118.163.74.160;
+allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
 allow 125.212.241.131;
@@ -122,7 +121,6 @@ allow 130.193.15.79;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.59.18.110;
-allow 139.162.249.209;
 allow 139.180.187.117;
 allow 139.99.172.11;
 allow 139.99.8.57;
@@ -133,9 +131,6 @@ allow 141.98.119.106;
 allow 142.44.133.81;
 allow 142.44.234.69;
 allow 143.110.156.176;
-allow 144.172.118.55;
-allow 144.172.118.76;
-allow 144.172.118.90;
 allow 144.24.197.112;
 allow 146.59.234.220;
 allow 146.59.35.246;
@@ -632,6 +627,7 @@ allow 192.99.168.180;
 allow 193.105.134.150;
 allow 193.105.134.155;
 allow 193.168.141.173;
+allow 193.168.143.161;
 allow 193.189.100.194;
 allow 193.189.100.195;
 allow 193.189.100.196;
@@ -914,7 +910,6 @@ allow 23.155.24.6;
 allow 23.155.8.104;
 allow 23.165.104.119;
 allow 23.236.122.62;
-allow 23.23.9.166;
 allow 23.26.133.152;
 allow 23.94.211.25;
 allow 2400:8901::f03c:93ff:fe68:23b3;
@@ -950,9 +945,6 @@ allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
-allow 2602:fccf:310:1::a;
-allow 2602:fccf:310:1::b;
-allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
@@ -1054,8 +1046,6 @@ allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
-allow 2605:6400:d814:2775::;
-allow 2605:6400:d814:4181::1;
 allow 2605:a140:2186:5418::1;
 allow 2605:aa80:0:9::3;
 allow 2607:5300:201:3100::535e;
@@ -1190,6 +1180,7 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a04:9dc0:31::c0cc:73;
+allow 2a04:9dc0:31::c0cc:fb;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1550,6 +1541,7 @@ allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
 allow 47.250.38.29;
+allow 50.19.41.253;
 allow 51.15.59.15;
 allow 51.178.45.216;
 allow 51.195.166.174;
@@ -1569,7 +1561,6 @@ allow 51.91.18.151;
 allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.190;
 allow 5.255.103.235;
@@ -1626,7 +1617,6 @@ allow 71.19.144.106;
 allow 71.19.144.222;
 allow 72.14.179.10;
 allow 72.211.49.235;
-allow 72.253.202.121;
 allow 74.82.47.194;
 allow 77.105.133.7;
 allow 77.105.146.42;
@@ -1668,6 +1658,7 @@ allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.115;
+allow 83.97.20.251;
 allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
