--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -137,9 +137,6 @@ deny 2602:fc24:12:a679::1;
 deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
 deny 2602:fc24:19:30::1;
-deny 2602:fccf:310:1::a;
-deny 2602:fccf:310:1::b;
-deny 2602:fccf:310:1::c;
 deny 2602:fef9:100:1100::199;
 deny 2603:c026:c102:5ff:2603:c026:c102:5ff;
 deny 2604:2dc0:202:300::ed3;
@@ -241,8 +238,6 @@ deny 2605:6400:30:f8da:2b2:a293:30ad:506d;
 deny 2605:6400:30:f920:f523:28ef:3617:8b86;
 deny 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 deny 2605:6400:40:fe09::2;
-deny 2605:6400:d814:2775::;
-deny 2605:6400:d814:4181::1;
 deny 2605:a140:2186:5418::1;
 deny 2605:aa80:0:9::3;
 deny 2607:5300:201:3100::535e;
@@ -376,6 +371,7 @@ deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a04:9dc0:31::c0cc:73;
+deny 2a04:9dc0:31::c0cc:fb;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
