--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -13,9 +13,6 @@ set_real_ip_from 103.251.167.10;
 set_real_ip_from 103.251.167.20;
 set_real_ip_from 103.253.24.18;
 set_real_ip_from 103.28.52.93;
-set_real_ip_from 104.167.242.116;
-set_real_ip_from 104.167.242.117;
-set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.1.138;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.232.126;
@@ -95,6 +92,7 @@ set_real_ip_from 108.181.27.205;
 set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.61.158.147;
 set_real_ip_from 108.61.189.136;
+set_real_ip_from 109.104.153.22;
 set_real_ip_from 109.169.33.163;
 set_real_ip_from 109.248.144.73;
 set_real_ip_from 109.69.67.17;
@@ -112,6 +110,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 118.163.74.160;
+set_real_ip_from 121.160.200.13;
 set_real_ip_from 121.78.28.175;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
@@ -122,7 +121,6 @@ set_real_ip_from 130.193.15.79;
 set_real_ip_from 135.125.205.25;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
-set_real_ip_from 139.162.249.209;
 set_real_ip_from 139.180.187.117;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
@@ -133,9 +131,6 @@ set_real_ip_from 141.98.119.106;
 set_real_ip_from 142.44.133.81;
 set_real_ip_from 142.44.234.69;
 set_real_ip_from 143.110.156.176;
-set_real_ip_from 144.172.118.55;
-set_real_ip_from 144.172.118.76;
-set_real_ip_from 144.172.118.90;
 set_real_ip_from 144.24.197.112;
 set_real_ip_from 146.59.234.220;
 set_real_ip_from 146.59.35.246;
@@ -632,6 +627,7 @@ set_real_ip_from 192.99.168.180;
 set_real_ip_from 193.105.134.150;
 set_real_ip_from 193.105.134.155;
 set_real_ip_from 193.168.141.173;
+set_real_ip_from 193.168.143.161;
 set_real_ip_from 193.189.100.194;
 set_real_ip_from 193.189.100.195;
 set_real_ip_from 193.189.100.196;
@@ -914,7 +910,6 @@ set_real_ip_from 23.155.24.6;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.165.104.119;
 set_real_ip_from 23.236.122.62;
-set_real_ip_from 23.23.9.166;
 set_real_ip_from 23.26.133.152;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 2400:8901::f03c:93ff:fe68:23b3;
@@ -950,9 +945,6 @@ set_real_ip_from 2602:fc24:12:a679::1;
 set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:2b4::1;
 set_real_ip_from 2602:fc24:19:30::1;
-set_real_ip_from 2602:fccf:310:1::a;
-set_real_ip_from 2602:fccf:310:1::b;
-set_real_ip_from 2602:fccf:310:1::c;
 set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
 set_real_ip_from 2604:2dc0:202:300::ed3;
@@ -1054,8 +1046,6 @@ set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
 set_real_ip_from 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 set_real_ip_from 2605:6400:40:fe09::2;
-set_real_ip_from 2605:6400:d814:2775::;
-set_real_ip_from 2605:6400:d814:4181::1;
 set_real_ip_from 2605:a140:2186:5418::1;
 set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:201:3100::535e;
@@ -1190,6 +1180,7 @@ set_real_ip_from 2a04:52c0:130:896e::1;
 set_real_ip_from 2a04:52c0:130:d285::1;
 set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a04:9dc0:31::c0cc:73;
+set_real_ip_from 2a04:9dc0:31::c0cc:fb;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
@@ -1550,6 +1541,7 @@ set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 46.38.255.27;
 set_real_ip_from 47.250.38.29;
+set_real_ip_from 50.19.41.253;
 set_real_ip_from 51.15.59.15;
 set_real_ip_from 51.178.45.216;
 set_real_ip_from 51.195.166.174;
@@ -1569,7 +1561,6 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.190;
 set_real_ip_from 5.255.103.235;
@@ -1626,7 +1617,6 @@ set_real_ip_from 71.19.144.106;
 set_real_ip_from 71.19.144.222;
 set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
-set_real_ip_from 72.253.202.121;
 set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.105.133.7;
 set_real_ip_from 77.105.146.42;
@@ -1668,6 +1658,7 @@ set_real_ip_from 82.221.139.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.115;
+set_real_ip_from 83.97.20.251;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.211.225.54;
