--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -109,7 +109,6 @@ allow 109.70.100.68;
 allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
-allow 118.163.74.160;
 allow 121.160.200.13;
 allow 121.78.28.175;
 allow 123.253.35.32;
@@ -813,7 +812,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -874,6 +872,7 @@ allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.109;
 allow 23.137.253.110;
+allow 23.137.253.27;
 allow 23.152.24.77;
 allow 23.154.177.10;
 allow 23.154.177.11;
@@ -945,6 +944,7 @@ allow 2602:fc24:12:a679::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
+allow 2602:fc24:19:eb06::1;
 allow 2602:fef9:100:1100::199;
 allow 2603:c026:c102:5ff:2603:c026:c102:5ff;
 allow 2604:2dc0:202:300::ed3;
@@ -1467,6 +1467,7 @@ allow 38.152.53.253;
 allow 38.152.53.254;
 allow 38.97.116.244;
 allow 41.216.183.87;
+allow 44.210.5.155;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1541,7 +1542,6 @@ allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.38.255.27;
 allow 47.250.38.29;
-allow 50.19.41.253;
 allow 51.15.59.15;
 allow 51.178.45.216;
 allow 51.195.166.174;
