--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -109,7 +109,6 @@ set_real_ip_from 109.70.100.68;
 set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
-set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.160.200.13;
 set_real_ip_from 121.78.28.175;
 set_real_ip_from 123.253.35.32;
@@ -813,7 +812,6 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
@@ -874,6 +872,7 @@ set_real_ip_from 23.137.250.83;
 set_real_ip_from 23.137.253.108;
 set_real_ip_from 23.137.253.109;
 set_real_ip_from 23.137.253.110;
+set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.152.24.77;
 set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
@@ -945,6 +944,7 @@ set_real_ip_from 2602:fc24:12:a679::1;
 set_real_ip_from 2602:fc24:19:1c9::1;
 set_real_ip_from 2602:fc24:19:2b4::1;
 set_real_ip_from 2602:fc24:19:30::1;
+set_real_ip_from 2602:fc24:19:eb06::1;
 set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:c026:c102:5ff:2603:c026:c102:5ff;
 set_real_ip_from 2604:2dc0:202:300::ed3;
@@ -1467,6 +1467,7 @@ set_real_ip_from 38.152.53.253;
 set_real_ip_from 38.152.53.254;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 41.216.183.87;
+set_real_ip_from 44.210.5.155;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1541,7 +1542,6 @@ set_real_ip_from 46.232.251.191;
 set_real_ip_from 46.234.47.105;
 set_real_ip_from 46.38.255.27;
 set_real_ip_from 47.250.38.29;
-set_real_ip_from 50.19.41.253;
 set_real_ip_from 51.15.59.15;
 set_real_ip_from 51.178.45.216;
 set_real_ip_from 51.195.166.174;
